STSW-IMG036/VL53L7CX_ULD_driver_2.0.1/VL53L7CX_ULD_API/inc/vl53l7cx_api.h

/**
 * @brief Current driver version.
 */

#define VL53L7CX_API_REVISION "VL53L7CX_2.0.0"
/**
 * @brief The default power mode is VL53L7CX_POWER_MODE_WAKEUP. User can choose
 * the mode VL53L7CX_POWER_MODE_SLEEP to save power consumption is the device
 * is not used. The low power mode retains the firmware and the configuration.
 * Both modes can be changed using function vl53l7cx_set_power_mode().
 */

#define VL53L7CX_POWER_MODE_SLEEP ((uint8_t)0U)
#define VL53L7CX_POWER_MODE_WAKEUP ((uint8_t)1U)
/**
 * @brief Macro VL53L7CX_MAX_RESULTS_SIZE indicates the maximum size used by
 * output through I2C. Value 40 corresponds to headers + meta-data + common-data
 * and 20 corresponds to the footer.
 */

#define VL53L7CX_MAX_RESULTS_SIZE (40U + L5CX_AMB_SIZE + L5CX_SPAD_SIZE + L5CX_NTAR_SIZE + L5CX_SPS_SIZE + L5CX_SIGR_SIZE + L5CX_DIST_SIZE + L5CX_RFLEST_SIZE + L5CX_STA_SIZE + L5CX_MOT_SIZE + 20U)
/**
 * @brief Structure VL53L7CX_Configuration contains the sensor configuration.
 * User MUST not manually change these field, except for the sensor address.
 */

typedef struct
{
	/* Platform, filled by customer into the 'platform.h' file */
	VL53L7CX_Platform platform;
	/* Results streamcount, value auto-incremented at each range */
	uint8_t streamcount;
	/* Size of data read though I2C */
	uint32_t data_read_size;
	/* Address of default configuration buffer */
	uint8_t *default_configuration;
	/* Address of default Xtalk buffer */
	uint8_t *default_xtalk;
	/* Offset buffer */
	uint8_t offset_data[VL53L7CX_OFFSET_BUFFER_SIZE];
	/* Xtalk buffer */
	uint8_t xtalk_data[VL53L7CX_XTALK_BUFFER_SIZE];
	/* Temporary buffer used for internal driver processing */
	uint8_t temp_buffer[VL53L7CX_TEMPORARY_BUFFER_SIZE];
	/* Auto-stop flag for stopping the sensor */
	uint8_t is_auto_stop_enabled;
} VL53L7CX_Configuration;
/**
 * @brief Structure VL53L7CX_ResultsData contains the ranging results of
 * VL53L7CX. If user wants more than 1 target per zone, the results can be split
 * into 2 sub-groups :
 * - Per zone results. These results are common to all targets (ambient_per_spad
 * , nb_target_detected and nb_spads_enabled).
 * - Per target results : These results are different relative to the detected
 * target (signal_per_spad, range_sigma_mm, distance_mm, reflectance,
 * target_status).
 */

typedef struct
{
	/* Internal sensor silicon temperature */
	int8_t silicon_temp_degc;

	/* Ambient noise in kcps/spads */
#ifndef VL53L7CX_DISABLE_AMBIENT_PER_SPAD
	uint32_t ambient_per_spad[VL53L7CX_RESOLUTION_8X8];
#endif

	/* Number of valid target detected for 1 zone */
#ifndef VL53L7CX_DISABLE_NB_TARGET_DETECTED
	uint8_t nb_target_detected[VL53L7CX_RESOLUTION_8X8];
#endif

	/* Number of spads enabled for this ranging */
#ifndef VL53L7CX_DISABLE_NB_SPADS_ENABLED
	uint32_t nb_spads_enabled[VL53L7CX_RESOLUTION_8X8];
#endif

	/* Signal returned to the sensor in kcps/spads */
#ifndef VL53L7CX_DISABLE_SIGNAL_PER_SPAD
	uint32_t signal_per_spad[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Sigma of the current distance in mm */
#ifndef VL53L7CX_DISABLE_RANGE_SIGMA_MM
	uint16_t range_sigma_mm[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Measured distance in mm */
#ifndef VL53L7CX_DISABLE_DISTANCE_MM
	int16_t distance_mm[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Estimated reflectance in percent */
#ifndef VL53L7CX_DISABLE_REFLECTANCE_PERCENT
	uint8_t reflectance[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Status indicating the measurement validity (5 & 9 means ranging OK)*/
#ifndef VL53L7CX_DISABLE_TARGET_STATUS
	uint8_t target_status[(VL53L7CX_RESOLUTION_8X8 * VL53L7CX_NB_TARGET_PER_ZONE)];
#endif

	/* Motion detector results */
#ifndef VL53L7CX_DISABLE_MOTION_INDICATOR
	struct
	{
		uint32_t global_indicator_1;
		uint32_t global_indicator_2;
		uint8_t status;
		uint8_t nb_of_detected_aggregates;
		uint8_t nb_of_aggregates;
		uint8_t spare;
		uint32_t motion[32];
	} motion_indicator;
#endif

} VL53L7CX_ResultsData;
uint8_t vl53l7cx_is_alive(
	VL53L7CX_Configuration *p_dev,
	uint8_t *p_is_alive);
/**
 * @brief Mandatory function used to initialize the sensor. This function must
 * be called after a power on, to load the firmware into the VL53L7CX. It takes
 * a few hundred milliseconds.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @return (uint8_t) status : 0 if initialization is OK.
 */

uint8_t vl53l7cx_init(
	VL53L7CX_Configuration *p_dev);
/**
 * @brief This function is used to change the I2C address of the sensor. If
 * multiple VL53L5 sensors are connected to the same I2C line, all other LPn
 * pins needs to be set to Low. The default sensor address is 0x52.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint16_t) i2c_address : New I2C address.
 * @return (uint8_t) status : 0 if new address is OK
 */

uint8_t vl53l7cx_set_i2c_address(
	VL53L7CX_Configuration *p_dev,
	uint16_t i2c_address);
/**
 * @brief This function is used to get the current sensor power mode.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *p_power_mode : Current power mode. The value of this
 * pointer is equal to 0 if the sensor is in low power,
 * (VL53L7CX_POWER_MODE_SLEEP), or 1 if sensor is in standard mode
 * (VL53L7CX_POWER_MODE_WAKEUP).
 * @return (uint8_t) status : 0 if power mode is OK
 */

uint8_t vl53l7cx_get_power_mode(
	VL53L7CX_Configuration *p_dev,
	uint8_t *p_power_mode);
/**
 * @brief This function is used to set the sensor in Low Power mode, for
 * example if the sensor is not used during a long time. The macro
 * VL53L7CX_POWER_MODE_SLEEP can be used to enable the low power mode. When user
 * want to restart the sensor, he can use macro VL53L7CX_POWER_MODE_WAKEUP.
 * Please ensure that the device is not streaming before calling the function.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) power_mode : Selected power mode (VL53L7CX_POWER_MODE_SLEEP
 * or VL53L7CX_POWER_MODE_WAKEUP)
 * @return (uint8_t) status : 0 if power mode is OK, or 127 if power mode
 * requested by user is not valid.
 */

uint8_t vl53l7cx_set_power_mode(
	VL53L7CX_Configuration *p_dev,
	uint8_t power_mode);
/**
 * @brief This function starts a ranging session. When the sensor streams, host
 * cannot change settings 'on-the-fly'.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @return (uint8_t) status : 0 if start is OK.
 */

uint8_t vl53l7cx_start_ranging(
	VL53L7CX_Configuration *p_dev);
/**
 * @brief This function stops the ranging session. It must be used when the
 * sensor streams, after calling vl53l7cx_start_ranging().
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @return (uint8_t) status : 0 if stop is OK
 */

uint8_t vl53l7cx_stop_ranging(
	VL53L7CX_Configuration *p_dev);
/**
 * @brief This function checks if a new data is ready by polling I2C. If a new
 * data is ready, a flag will be raised.
 * @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.
 * @param (uint8_t) *p_isReady : Value of this pointer be updated to 0 if data
 * is not ready, or 1 if a new data is ready.
 * @return (uint8_t) status : 0 if I2C reading is OK
 */

uint8_t vl53l7cx_check_data_ready(
	VL53L7CX_Configuration *p_dev,
	uint8_t *p_isReady);