src/ffi/bindings.rs

/* automatically generated by rust-bindgen 0.72.1 */

#![allow(warnings, reason = "Auto-generated FFI bindings via bindgen")]
#![allow(clippy::all, reason = "Auto-generated FFI bindings via bindgen")]
#![allow(clippy::allow_attributes_without_reason, reason = "Internal bindgen blocks omit reasons")]

pub const VL53L7CX_NB_TARGET_PER_ZONE: u32 = 1;
pub const VL53L7CX_API_REVISION: &[u8; 15] = b"VL53L7CX_2.0.0\0";
pub const VL53L7CX_MAX_RESULTS_SIZE: u32 = 1452;
#[doc = " @brief Structure VL53L7CX_Platform needs to be filled by the customer,\n depending on his platform. At least, it contains the VL53L7CX I2C address.\n Some additional fields can be added, as descriptors, or platform\n dependencies. Anything added into this structure is visible into the platform\n layer."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VL53L7CX_Platform {
    pub address: u16,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VL53L7CX_Platform"][::core::mem::size_of::<VL53L7CX_Platform>() - 2usize];
    ["Alignment of VL53L7CX_Platform"][::core::mem::align_of::<VL53L7CX_Platform>() - 2usize];
    ["Offset of field: VL53L7CX_Platform::address"]
        [::core::mem::offset_of!(VL53L7CX_Platform, address) - 0usize];
};
#[doc = " @brief Structure VL53L7CX_Configuration contains the sensor configuration.\n User MUST not manually change these field, except for the sensor address."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VL53L7CX_Configuration {
    pub platform: VL53L7CX_Platform,
    pub streamcount: u8,
    pub data_read_size: u32,
    pub default_configuration: *mut u8,
    pub default_xtalk: *mut u8,
    pub offset_data: [u8; 488usize],
    pub xtalk_data: [u8; 776usize],
    pub temp_buffer: [u8; 1452usize],
    pub is_auto_stop_enabled: u8,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VL53L7CX_Configuration"]
        [::core::mem::size_of::<VL53L7CX_Configuration>() - 2736usize];
    ["Alignment of VL53L7CX_Configuration"]
        [::core::mem::align_of::<VL53L7CX_Configuration>() - 4usize];
    ["Offset of field: VL53L7CX_Configuration::platform"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, platform) - 0usize];
    ["Offset of field: VL53L7CX_Configuration::streamcount"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, streamcount) - 2usize];
    ["Offset of field: VL53L7CX_Configuration::data_read_size"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, data_read_size) - 4usize];
    ["Offset of field: VL53L7CX_Configuration::default_configuration"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, default_configuration) - 8usize];
    ["Offset of field: VL53L7CX_Configuration::default_xtalk"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, default_xtalk) - 12usize];
    ["Offset of field: VL53L7CX_Configuration::offset_data"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, offset_data) - 16usize];
    ["Offset of field: VL53L7CX_Configuration::xtalk_data"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, xtalk_data) - 504usize];
    ["Offset of field: VL53L7CX_Configuration::temp_buffer"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, temp_buffer) - 1280usize];
    ["Offset of field: VL53L7CX_Configuration::is_auto_stop_enabled"]
        [::core::mem::offset_of!(VL53L7CX_Configuration, is_auto_stop_enabled) - 2732usize];
};
#[doc = " @brief Structure VL53L7CX_ResultsData contains the ranging results of\n VL53L7CX. If user wants more than 1 target per zone, the results can be split\n into 2 sub-groups :\n - Per zone results. These results are common to all targets (ambient_per_spad\n , nb_target_detected and nb_spads_enabled).\n - Per target results : These results are different relative to the detected\n target (signal_per_spad, range_sigma_mm, distance_mm, reflectance,\n target_status)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VL53L7CX_ResultsData {
    pub silicon_temp_degc: i8,
    pub ambient_per_spad: [u32; 64usize],
    pub nb_target_detected: [u8; 64usize],
    pub nb_spads_enabled: [u32; 64usize],
    pub signal_per_spad: [u32; 64usize],
    pub range_sigma_mm: [u16; 64usize],
    pub distance_mm: [i16; 64usize],
    pub reflectance: [u8; 64usize],
    pub target_status: [u8; 64usize],
    pub motion_indicator: VL53L7CX_ResultsData__bindgen_ty_1,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct VL53L7CX_ResultsData__bindgen_ty_1 {
    pub global_indicator_1: u32,
    pub global_indicator_2: u32,
    pub status: u8,
    pub nb_of_detected_aggregates: u8,
    pub nb_of_aggregates: u8,
    pub spare: u8,
    pub motion: [u32; 32usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VL53L7CX_ResultsData__bindgen_ty_1"]
        [::core::mem::size_of::<VL53L7CX_ResultsData__bindgen_ty_1>() - 140usize];
    ["Alignment of VL53L7CX_ResultsData__bindgen_ty_1"]
        [::core::mem::align_of::<VL53L7CX_ResultsData__bindgen_ty_1>() - 4usize];
    ["Offset of field: VL53L7CX_ResultsData__bindgen_ty_1::global_indicator_1"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData__bindgen_ty_1, global_indicator_1) - 0usize];
    ["Offset of field: VL53L7CX_ResultsData__bindgen_ty_1::global_indicator_2"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData__bindgen_ty_1, global_indicator_2) - 4usize];
    ["Offset of field: VL53L7CX_ResultsData__bindgen_ty_1::status"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData__bindgen_ty_1, status) - 8usize];
    ["Offset of field: VL53L7CX_ResultsData__bindgen_ty_1::nb_of_detected_aggregates"][::core::mem::offset_of!(
        VL53L7CX_ResultsData__bindgen_ty_1,
        nb_of_detected_aggregates
    ) - 9usize];
    ["Offset of field: VL53L7CX_ResultsData__bindgen_ty_1::nb_of_aggregates"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData__bindgen_ty_1, nb_of_aggregates) - 10usize];
    ["Offset of field: VL53L7CX_ResultsData__bindgen_ty_1::spare"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData__bindgen_ty_1, spare) - 11usize];
    ["Offset of field: VL53L7CX_ResultsData__bindgen_ty_1::motion"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData__bindgen_ty_1, motion) - 12usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of VL53L7CX_ResultsData"][::core::mem::size_of::<VL53L7CX_ResultsData>() - 1360usize];
    ["Alignment of VL53L7CX_ResultsData"][::core::mem::align_of::<VL53L7CX_ResultsData>() - 4usize];
    ["Offset of field: VL53L7CX_ResultsData::silicon_temp_degc"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, silicon_temp_degc) - 0usize];
    ["Offset of field: VL53L7CX_ResultsData::ambient_per_spad"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, ambient_per_spad) - 4usize];
    ["Offset of field: VL53L7CX_ResultsData::nb_target_detected"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, nb_target_detected) - 260usize];
    ["Offset of field: VL53L7CX_ResultsData::nb_spads_enabled"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, nb_spads_enabled) - 324usize];
    ["Offset of field: VL53L7CX_ResultsData::signal_per_spad"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, signal_per_spad) - 580usize];
    ["Offset of field: VL53L7CX_ResultsData::range_sigma_mm"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, range_sigma_mm) - 836usize];
    ["Offset of field: VL53L7CX_ResultsData::distance_mm"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, distance_mm) - 964usize];
    ["Offset of field: VL53L7CX_ResultsData::reflectance"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, reflectance) - 1092usize];
    ["Offset of field: VL53L7CX_ResultsData::target_status"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, target_status) - 1156usize];
    ["Offset of field: VL53L7CX_ResultsData::motion_indicator"]
        [::core::mem::offset_of!(VL53L7CX_ResultsData, motion_indicator) - 1220usize];
};
unsafe extern "C" {
    pub fn vl53l7cx_is_alive(p_dev: *mut VL53L7CX_Configuration, p_is_alive: *mut u8) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief Mandatory function used to initialize the sensor. This function must\n be called after a power on, to load the firmware into the VL53L7CX. It takes\n a few hundred milliseconds.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @return (uint8_t) status : 0 if initialization is OK."]
    pub fn vl53l7cx_init(p_dev: *mut VL53L7CX_Configuration) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function is used to change the I2C address of the sensor. If\n multiple VL53L5 sensors are connected to the same I2C line, all other LPn\n pins needs to be set to Low. The default sensor address is 0x52.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint16_t) i2c_address : New I2C address.\n @return (uint8_t) status : 0 if new address is OK"]
    pub fn vl53l7cx_set_i2c_address(p_dev: *mut VL53L7CX_Configuration, i2c_address: u16) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function is used to get the current sensor power mode.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *p_power_mode : Current power mode. The value of this\n pointer is equal to 0 if the sensor is in low power,\n (VL53L7CX_POWER_MODE_SLEEP), or 1 if sensor is in standard mode\n (VL53L7CX_POWER_MODE_WAKEUP).\n @return (uint8_t) status : 0 if power mode is OK"]
    pub fn vl53l7cx_get_power_mode(p_dev: *mut VL53L7CX_Configuration, p_power_mode: *mut u8)
    -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function is used to set the sensor in Low Power mode, for\n example if the sensor is not used during a long time. The macro\n VL53L7CX_POWER_MODE_SLEEP can be used to enable the low power mode. When user\n want to restart the sensor, he can use macro VL53L7CX_POWER_MODE_WAKEUP.\n Please ensure that the device is not streaming before calling the function.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) power_mode : Selected power mode (VL53L7CX_POWER_MODE_SLEEP\n or VL53L7CX_POWER_MODE_WAKEUP)\n @return (uint8_t) status : 0 if power mode is OK, or 127 if power mode\n requested by user is not valid."]
    pub fn vl53l7cx_set_power_mode(p_dev: *mut VL53L7CX_Configuration, power_mode: u8) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function starts a ranging session. When the sensor streams, host\n cannot change settings 'on-the-fly'.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @return (uint8_t) status : 0 if start is OK."]
    pub fn vl53l7cx_start_ranging(p_dev: *mut VL53L7CX_Configuration) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function stops the ranging session. It must be used when the\n sensor streams, after calling vl53l7cx_start_ranging().\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @return (uint8_t) status : 0 if stop is OK"]
    pub fn vl53l7cx_stop_ranging(p_dev: *mut VL53L7CX_Configuration) -> u8;
}
unsafe extern "C" {
    #[doc = " @brief This function checks if a new data is ready by polling I2C. If a new\n data is ready, a flag will be raised.\n @param (VL53L7CX_Configuration) *p_dev : VL53L7CX configuration structure.\n @param (uint8_t) *p_isReady : Value of this pointer be updated to 0 if data\n is not ready, or 1 if a new data is ready.\n @return (uint8_t) status : 0 if I2C reading is OK"]
    pub fn vl53l7cx_check_data_ready(p_dev: *mut VL53L7CX_Configuration, p_isReady: *mut u8) -> u8;
}
